Revision history for experimental

{{$NEXT}}
          Hard require 5.010

0.005     2013-06-09 00:40:53 Europe/Amsterdam
          Grandfathered lexical_topic

0.004     2013-06-05 11:42:40 Europe/Amsterdam
          Give better error on legacy perls

0.003     2013-05-27 13:58:37 Europe/Amsterdam
          More fixing for older perl versions

0.002     2013-05-27 02:07:46 Europe/Amsterdam
          Fix grandfathering clause
          Added basic tests

0.001     2013-05-26 15:18:43 Europe/Amsterdam
          First release